--- a/IntegrateLecture/lecture/templates/detail.html
+++ b/IntegrateLecture/lecture/templates/detail.html
@@ -7,8 +7,8 @@
     <title>{{ lecture.lecture_name }} - 강의 상세 정보</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/layout.css' %}">
-    <link rel="stylesheet" href="{% static 'css/detail.css' %}">
+    <link rel="stylesheet" href="{% static 'css/detail_body.css' %}">
+    <link rel="stylesheet" href="{% static 'css/detail_header.css' %}">
     <link rel="stylesheet" href="{% static 'css/review.css' %}">
 </head>
 <body>
@@ -157,6 +157,6 @@
         </div>
     </main>
 
-    <script src="/static/js/script.js"></script>
+    <script src="/static/js/detail.js"></script>
 </body>
 </html>
