feat: User 생성 및 리스트 확인 기능 완성

--- a/IntegrateLecture/lecture/templates/registration/Login.html
+++ b/IntegrateLecture/lecture/templates/registration/Login.html
@@ -5,23 +5,21 @@
 {% block form_title %}LOGIN{% endblock %}
 
 {% block content %}
-<form method="post">
+<form method="POST" action="">
     {% csrf_token %}
     <div class="input-group mb-3">
         <div class="input-group-append">
-            <span class="input-group-text"><i class="fas fa-user"></i></span>
+            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
         </div>
         {{ form.username }}
     </div>
-    <div class="input-group mb-2">
+    <div class="input-group mb-3">
         <div class="input-group-append">
             <span class="input-group-text"><i class="fas fa-key"></i></span>
         </div>
         {{ form.password }}
     </div>
-    {% if error %}
-        <p class="text-danger">{{ error }}</p>
-    {% endif %}
+    
     <div class="d-flex justify-content-center mt-3 login_container">
         <input class="btn login_btn" type="submit" value="Login">
     </div>
@@ -34,16 +32,4 @@
         Don't have an account? <a href="{% url 'signup' %}" class="ml-2">Sign Up</a>
     </div>
 </div>
-{% endblock %}
-
-{% block extra_scripts %}
-<script>
-    var form_fields = document.getElementsByTagName('input')
-    form_fields[1].placeholder='UserEmail..';
-    form_fields[2].placeholder='Password..';
-
-    for (var field in form_fields){
-        form_fields[field].className += ' form-control'
-    }
-</script>
 {% endblock %}
