--- a/IntegrateLecture/lecture/templates/registration/Signup.html
+++ b/IntegrateLecture/lecture/templates/registration/Signup.html
@@ -11,43 +11,43 @@
         <div class="input-group-append">
             <span class="input-group-text"><i class="fas fa-user"></i></span>
         </div>
-        {{form.user_name}}
+        {{ form.user_name }}
     </div>
     <div class="input-group mb-3">
         <div class="input-group-append">
             <span class="input-group-text"><i class="fas fa-envelope"></i></span>
         </div>
-        {{form.user_email}}
+        {{ form.user_email }}
     </div>
     <div class="input-group mb-2">
         <div class="input-group-append">
             <span class="input-group-text"><i class="fas fa-key"></i></span>
         </div>
-        {{form.password1}}
+        {{ form.password_1 }}
     </div>
     <div class="input-group mb-2">
         <div class="input-group-append">
             <span class="input-group-text"><i class="fas fa-key"></i></span>
         </div>
-        {{form.password2}}
+        {{ form.password_2 }}
     </div>
     <div class="input-group mb-2">
         <div class="input-group-append">
             <span class="input-group-text"><i class="fas fa-key"></i></span>
         </div>
-        {{form.Language}}
+        {{ form.language }}
     </div>
     <div class="input-group mb-2">
         <div class="input-group-append">
             <span class="input-group-text"><i class="fas fa-key"></i></span>
         </div>
-        {{form.skill1}}
+        {{ form.skill_1 }}
     </div>
     <div class="input-group mb-2">
         <div class="input-group-append">
             <span class="input-group-text"><i class="fas fa-key"></i></span>
         </div>
-        {{form.skill2}}
+        {{ form.skill_2 }}
     </div>
 
     <div class="d-flex justify-content-center mt-3 login_container">
