--- a/IntegrateLecture/lecture/templates/registration/Login.html
+++ b/IntegrateLecture/lecture/templates/registration/Login.html
@@ -29,7 +29,7 @@
 {% block extra_links %}
 <div class="mt-4">
     <div class="d-flex justify-content-center links">
-        Don't have an account? <a href="{% url 'signup' %}" class="ml-2">Sign Up</a>
+        처음이라면? <a href="{% url 'signup' %}" class="ml-2">Sign Up</a>
     </div>
 </div>
 {% endblock %}
