--- a/IntegrateLecture/lecture/templates/registration/Signup.html
+++ b/IntegrateLecture/lecture/templates/registration/Signup.html
@@ -59,7 +59,7 @@
 {% block extra_links %}
 <div class="mt-4">
     <div class="d-flex justify-content-center links">
-        Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
+        이미 계정이 있다면? <a href="{% url 'login' %}" class="ml-2">Login</a>
     </div>
 </div>
 {% endblock %}
