feat: Logout 기능 추가

--- a/IntegrateLecture/lecture/templates/index.html
+++ b/IntegrateLecture/lecture/templates/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <div id="app">
-        <h1>Lecture List</h1>
+        <header>
+            <h1>Lecture List</h1>
+            {% if user.is_authenticated %}
+                <form method="post" action="{% url 'logout' %}?next={{ request.path }}">
+                    {% csrf_token %}
+                    <button type="submit">Logout</button>
+            {% else %}
+                <a href="{%url 'login' %}">Login</a>
+            {% endif %}
+        </hedaer>
         <div id="filters">
             <select id="mainCategory">
                 <option value="">All Main Categories</option>
