--- a/IntegrateLecture/lecture/static/css/base_header.css
+++ b/IntegrateLecture/lecture/static/css/base_header.css
@@ -2,11 +2,13 @@
 header {
     background: #fff; 
     color: #000;
-    padding: 20px 50px;
+    padding: 20px 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #c4c2c2;
+    position: relative;
+    z-index: 1;
 }
 
 .header-container {
@@ -17,18 +19,20 @@ header {
 }
 
 .logo-container {
-    flex: 2;
     display: flex;
     align-items: center;
     font-size: 15px;
+    margin: 0px 10px;
 }
 
 .search-container {
-    flex: 6;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 600px; /* 최소 너비 설정 */
+    transition: all 0.3s ease; /* 부드러운 애니메이션 추가 */
 }
+
 
 .search-container input {
     width: 80%;
@@ -37,7 +41,9 @@ header {
     background-color: #f7f7f7;
     border-radius: 10px;
     margin-right: 10px;
+    transition: opacity 0.3s ease;
 }
+
 
 .search-container button {
     background: none;
@@ -48,20 +54,21 @@ header {
 }
 
 .icon-container {
-    flex: 1;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    min-width: 200px; /* 최소 너비 설정 */
 }
+
 
 .icon-container button {
     background: none;
     border: none;
     cursor: pointer;
-    border : 1.5px solid #e5e5e5;
+    border: 1.5px solid #e5e5e5;
     border-radius: 5px;
     font-size: 15px;
-    padding : 10px;
+    padding: 5px;
     margin: 0px 10px;
 }
 
@@ -78,7 +85,6 @@ body, h1, h2, h3, p, div, button, input {
     box-sizing: border-box;
 }
 
-
 body {
     font-family: Arial, sans-serif;
     background-color: #fff;
@@ -89,4 +95,5 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
 
