--- a/IntegrateLecture/lecture/templates/index.html
+++ b/IntegrateLecture/lecture/templates/index.html
@@ -14,16 +14,18 @@
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <p> 사이트 로고 </p>
-            <div class="search-container">
-                <input type="text" placeholder="원하는 강의를 검색해보세요." id="searchInput">
-                <button onclick="searchLecture()">
+                <p>사이트 로고</p>
+            </div>
+            <div class="search-container" id="searchContainer">
+                <input class="searchInput" type="text" placeholder="원하는 강의를 검색해보세요." id="searchInput">
+                <button id="searchButton" onclick="toggleSearch()">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
             </div>
-            <div class="icon-container">
-                <button><a> 로그인 </a></button>
-                <button><a> 회원가입 </a></button>
+            <div class="icon-container" id="iconContainer">
+                {% comment %} <button><i id="heart-icon" class="fa-regular fa-heart"></i></button> {% endcomment %}
+                <button><a>로그인</a></button>
+                <button><a>회원가입</a></button>
             </div>
         </div>
     </header>
@@ -45,6 +47,12 @@
                     <select id="sortType">
                         <option value="RECENT">최신순</option>
                         <option value="RECOMMEND">추천순</option>
+                    </select>
+                    <select id="levelSelect">
+                        <option value="">난이도</option>
+                        <option value="입문">입문</option>
+                        <option value="초급">초급</option>
+                        <option value="중급이상">중급이상</option>
                     </select>
                 </div>
             </div>
