feat: User Page 구성 조정

--- a/IntegrateLecture/lecture/templates/user_detail/user_update.html
+++ b/IntegrateLecture/lecture/templates/user_detail/user_update.html
@@ -31,3 +31,7 @@
     <a class="button" href="{% url 'user_detail' user.pk %}">취소</a>
 </body>
 </html>
+{% comment %} 
+<div class="col-sm-2">
+    <input type="button" class="btn btn-primary px-4" value="Save">
+</div> {% endcomment %}
