--- a/IntegrateLecture/lecture/templates/user_base.html
+++ b/IntegrateLecture/lecture/templates/user_base.html
@@ -1,6 +1,6 @@
+{% load tz %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <title>{% block title %}User Profile{% endblock %}</title>
@@ -72,7 +72,7 @@
             text-decoration: none;
         }
     </style>
-    <script>
+    <script> // User_detail의 내용을 바꿀 때 Enter 키를 사용하면 수정 버튼이 클릭 되도록 기능 추가
         document.addEventListener('DOMContentLoaded', function() {
             var form = document.getElementById('myForm');
             form.addEventListener('keydown', function(event) {
@@ -84,7 +84,6 @@
         });
     </script>
 </head>
-
 <body>
     <div class="container">
         <div class="main-body">
@@ -102,7 +101,7 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
                                 <div class="mt-3">
                                     <h4>{{ user.user_name }}</h4>
-                                    <h6>{{ user.last_login }}</h6>
+                                    <h6>{{ user.last_login|localtime|date:"< Y .M .d >  P" }}</h6>
                                 </div>
                             </div>
                         </div>
@@ -194,5 +193,4 @@
         </div>
     </div>
 </body>
-
 </html>
