--- a/IntegrateLecture/lecture/templates/user_detail/user_detail.html
+++ b/IntegrateLecture/lecture/templates/user_detail/user_detail.html
@@ -6,6 +6,39 @@
 <li class="breadcrumb-item">User Profile</li>
 {% endblock %}
 
+{% block link_info %}
+<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+    <h6 class="mb-0">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" 
+            stroke-linecap="round" stroke-linejoin="round" 
+            class="feather feather-github mr-2 icon-inline">
+            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+        </svg><a href='' target="__blank">Github</a></h6>
+        {% if user.github_url %}
+            <span class="text-secondary">{{ user.github_url }}</span>
+        {% else %}
+            <span class="text-secondary">None</span>
+        {% endif %}
+</li>
+<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+    <h6 class="mb-0">
+        <img src='https://cdn-icons-png.flaticon.com/512/145/145807.png' width="24" height="24"
+            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round"
+            class="feather feather-facebook mr-2 icon-inline text-primary">
+            <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z">
+            </path>
+        </img><a href='' target="__blank">LinkedIn</a></h6>
+        {% if user.linkedin_url %}
+            <span class="text-secondary">{{ user.linkedin_url }}</span>
+        {% else %}
+            <span class="text-secondary">None</span>
+        {% endif %}
+
+</li>
+{% endblock %}
+
 {% block content %}
 <div class="card mb-3">
     <div class="card-body">
