--- a/IntegrateLecture/lecture/templates/user_base.html
+++ b/IntegrateLecture/lecture/templates/user_base.html
@@ -90,6 +90,22 @@
                 }
             });
         });
+
+        document.addEventListener("DOMContentLoaded", function() {
+            const deleteButton = document.querySelectorAll('.delete-btn');
+
+            deleteButton.forEach(button => {
+                button.addEventListener('click', function(event) {
+                    event.preventDefault();
+
+                    const confirmation = confirm("정말로 삭제하시겠습니까?");
+
+                    if (confirmation) {
+                        this.closest('form').submit();
+                    }
+                });
+            });
+        });
     </script>
 </head>
 <body>
