--- a/IntegrateLecture/lecture/templates/user_detail/user_detail.html
+++ b/IntegrateLecture/lecture/templates/user_detail/user_detail.html
@@ -4,6 +4,13 @@
 
 {% block breadcrumb %}
 <li class="breadcrumb-item">User Profile</li>
+<div class="col-md-9"></div>
+<form method="post" action="{% url 'user_delete' pk=user.pk %}">
+    {% csrf_token %}
+    {% comment %} <a class="btn btn-danger delete-btn" href="{% url 'user_delete' pk=user.pk %}">Delete</a> {% endcomment %}
+    <button type="submit" class="btn btn-danger delete-btn">Delete</button>
+</form>
+
 {% endblock %}
 
 {% block link_info %}
