--- a/IntegrateLecture/lecture/static/css/base_header.css
+++ b/IntegrateLecture/lecture/static/css/base_header.css
@@ -77,6 +77,7 @@ main {
     flex-direction: row;
     box-sizing: border-box;
     flex-wrap: wrap; /*화면 크기에 따라 줄바꿈 되도록 설정 */
+    line-height: 1.5;
 }
 
 body, h1, h2, h3, p, div, button, input {
