--- a/IntegrateLecture/lecture/templates/detail.html
+++ b/IntegrateLecture/lecture/templates/detail.html
@@ -102,38 +102,49 @@
                     <h2>해당 강의의 리뷰 분석</h2>
                     <hr class="custom-hr"/> 
                     <div id="review-content">
-                        {% if review_analysis %}
-                            <div class="reivew-text">
+                        {% if lecture.review_count > 0 and lecture.scope > 0 %}
+                            <div class="review-text">
                                 <h3>별점 평균</h3>
-                                <p>{{ lecture.scope }} / 5</p></br>
+                                <p>{{ lecture.scope }} / 5</p><br>
                                 <h3>총 리뷰 수</h3>
-                                <p>{{ lecture.review_count }}개</p></br>
+                                <p>{{ lecture.review_count }}개</p><br>
                             </div>
-                            <div class="avg-sentiment-container">
-                                <h3>강의평의 평균적인 분위기</h3>
-                                <div class="horizontal-bar-container">
-                                    <div class="horizontal-bar avg-sentiment"></div>
+                                <div class="avg-sentiment-container">
+                                    <h3>강의평의 평균적인 분위기</h3>
+                                    {% if review_analysis.avg_sentiment > 0 %}
+                                        <div class="horizontal-bar-container">
+                                            <div class="horizontal-bar avg-sentiment"></div>
+                                        </div>
+                                        <div class="bar-label">
+                                            <p>부정적</p>
+                                            <p>긍정적</p>
+                                        </div>
+                                    {% else %}
+                                        <p>리뷰 분석이 존재하지 않는 강의에요😅</p>
+                                    {% endif %}
+                                </div><br>
+                
+                                <div class="review-percent">
+                                    <h3>강의평의 비율</h3>
+                                    {% if review_analysis.positive_count > 0 or review_analysis.negative_count > 0 or review_analysis.neutral_count > 0 %}
+                                        <div class="chart-container">
+                                            <canvas id="sentimentChart"></canvas>
+                                        </div>
+                                    {% else %}
+                                        <p>리뷰 분석이 존재하지 않는 강의에요😅</p>
+                                    {% endif %}
+                                </div><br>
+                                <div class="review-summary">
+                                    <h3>강의평 요약</h3>
+                                    {% if review_analysis.summary %}
+                                        <p>{{ review_analysis.summary }}</p>
+                                    {% else %}
+                                        <p>리뷰 요약이 존재하지 않는 강의에요😅</p>
+                                    {% endif %}
                                 </div>
-                                <div class="bar-label">
-                                    <p >부정적</p>
-                                    <p >긍정적</p>
-                                </div>
-                            </div></br>
-                            <!-- 감정 분석 -->
-                            <div class="review-percent">
-                                <h3>강의평의 비율</h3>
-                                <div class="chart-container">
-                                    <canvas id="sentimentChart"></canvas>
-                                </div>
-                            </div></br>
-                            
-                            <div class="review-summary">
-                                <h3>강의평 요약</h3>
-                                <p>{{ review_analysis.summary }}</p>
-                            </div>
                         {% else %}
                             <p>리뷰가 존재하지 않는 강의에요😅</p>
-                        {% endif %}
+                        {% endif %}                   
                     </div>
                 </div></br>
                 <br>
@@ -173,9 +184,6 @@
             </div>
         </div>
     </main>
-    <script src="/static/js/detail.js"></script>
-    <script src="{% static 'js/all_lec.js' %}"></script>
-
     <script>
         {% if user.is_authenticated %}
             window.currentUserId = "{{ user.user_id }}";
