--- a/IntegrateLecture/lecture/templates/user_base.html
+++ b/IntegrateLecture/lecture/templates/user_base.html
@@ -1,4 +1,5 @@
 {% load tz %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/all_lec_body.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base_header.css' %}">
     <style type="text/css">
         body {
             margin-top: 20px;
@@ -81,7 +86,7 @@
         }
     </style>
     <script> // User_detail의 내용을 바꿀 때 Enter 키를 사용하면 수정 버튼이 클릭 되도록 기능 추가
-        document.addEventListener('DOMContentLoaded', function() {
+        {% comment %} document.addEventListener('DOMContentLoaded', function() {
             var form = document.getElementById('myForm');
             form.addEventListener('keydown', function(event) {
                 if (event.key === 'Enter') {
@@ -89,7 +94,7 @@
                     form.querySelector('button[type="submit"]').click();
                 }
             });
-        });
+        }); {% endcomment %}
 
         document.addEventListener("DOMContentLoaded", function() {
             const deleteButton = document.querySelectorAll('.delete-btn');
@@ -106,9 +111,43 @@
                 });
             });
         });
+
+        document.addEventListener("DOMContentLoaded", function() {
+            const removeButtons = document.querySelectorAll(".remove-wishlist-item");
+
+            removeButtons.forEach(button => {
+                button.addEventListener("click", function(event) {
+                    event.preventDefault();
+                    const listItem = this.closest(".wishlist-item");
+                    const lectureId = listItem.getAttribute("data-lecture-id")
+
+                    fetch("{% url 'wishlist_remove' pk=user.pk %}", {
+                        method: "POST",
+                        headers: {
+                            "Content-Type": "application/json",
+                            "X-CSRFToken": "{{ csrf_token }}"
+                        },
+                        body: JSON.stringify({ lecture: lectureId })
+                    })
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.success) {
+                            listItem.remove();
+                            location.reload();
+                        } else {
+                            alert(data.message);
+                        }
+                    })
+                    .catch(error => {
+                        console.error("Error:", error);
+                    });
+                });
+            });
+        });
     </script>
 </head>
 <body>
+    {% block header %}{%endblock%}
     <div class="container">
         <div class="main-body">
             <nav aria-label="breadcrumb" class="main-breadcrumb">
@@ -170,16 +209,17 @@
                                     <h6 class="d-flex align-items-center mb-3">
                                         <iclass="material-icons text-info mr-2">Wish List</iclass=>
                                     </h6>
+                                    {% comment %} <pre>{{ wishlist }}</pre>
                                     <ul class="wishlist-items">
-                                        {% for item in wishlist_items %}
+                                        {% for item in wishlist %}
                                             <li class="wishlist-item">
-                                                <span>{{ item }}</span>
+                                                <span>{{ item.lecture.lecture_name }}</span>
                                                 <a href="{% url 'wishlist_delete' item.pk %}" class="delete-icon material-icons">close</a>
                                             </li>
                                         {% empty %}
                                             <li>No Wish Lecture added yet.</li>
                                         {% endfor %}
-                                    </ul>
+                                    </ul> {% endcomment %}
                                 </div>
                             </div>
                         </div>
@@ -188,7 +228,7 @@
                                 <div class="card-body">
                                     <h6 class="d-flex align-items-center mb-3">
                                         <iclass="material-icons text-info mr-2">My Skill</iclass=></h6>
-                                        {% for skill, value in user.skills.items %}
+                                        {% for skill, value in user.skills %}
                                             <small> - {{ skill }}</small>
                                             <div class="progress mb-3" style="height: 5px">
                                                 <div class="progress-bar bg-primary" role="progressbar" style="width: {{ value }}%" aria-valuenow="{{ value }}" aria-valuemin="0" aria-valuemax="10"></div>
@@ -200,6 +240,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-12">
+                        <form method="post" action="{% url 'user_delete' pk=user.pk %}">
+                            {% csrf_token %}
+                            {% comment %} <a class="btn btn-danger delete-btn" href="{% url 'user_delete' pk=user.pk %}">Delete</a> {% endcomment %}
+                            <button type="submit" class="btn btn-danger delete-btn">회원탈퇴</button>
+                        </form>
+                    </div>
+
                 </div>
             </div>
         </div>
