--- a/IntegrateLecture/lecture/templates/detail.html
+++ b/IntegrateLecture/lecture/templates/detail.html
@@ -15,10 +15,15 @@
         const negativePercentage = {{ negative_percentage|floatformat:2 }};
         const neutralPercentage = {{ neutral_percentage|floatformat:2 }};
         const avgSentiment = {{ review_analysis.avg_sentiment|floatformat:2 }};
+        const priceHistory = {{ price_history }};
+        const priceHistoryDate = {{ price_history_date|safe }};
     </script>
+
     <script src="{% static 'js/detail.js' %}"></script>
     <script src="{% static 'js/all_lec.js' %}"></script>
     <script src="{% static 'js/chart.js' %}"></script>
+    <script src="{% static 'js/price_history_chart.js' %}"></script>
+
     
 </head>
 <body>
@@ -152,6 +157,7 @@
                     <h2>가격 히스토리</h2>
                     <hr class="custom-hr"/>
                     <!-- 가격 히스토리를 여기에 표시 -->
+                    <canvas id="priceHistoryChart" width="100%"></canvas>
                 </div>
             </div>
             <div class="sticky-container">
