feat: 강의 알람 기능 추가

--- a/IntegrateLecture/lecture/static/css/detail_body.css
+++ b/IntegrateLecture/lecture/static/css/detail_body.css
@@ -282,6 +282,10 @@
     transition: background 0.3s;
 }
 
+.hidden {
+    display: none;
+}
+
 
 .sticky-button .num1:hover {
     background: #00132e;
@@ -391,7 +395,7 @@
 }
 
 .chart-container {
-    width: 50%;
+    width: 40%;
     margin: 20px auto;
 }
 
