--- a/IntegrateLecture/lecture/templates/index.html
+++ b/IntegrateLecture/lecture/templates/index.html
@@ -14,7 +14,10 @@
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <p>사이트 로고</p>
+                <!-- 사이트 로고 -->
+                <a href="/main">
+                    <img src="https://github.com/user-attachments/assets/a62da592-60ca-4209-b109-5fbae1ac0831" width="60" height="53"/>
+                </a>
             </div>
             <div class="search-container" id="searchContainer">
                 <input class="searchInput" type="text" placeholder="원하는 강의를 검색해보세요." id="searchInput">
