feat: User Click, Search, Tag Click Event 처리 기능 추가

--- a/IntegrateLecture/lecture/templates/index.html
+++ b/IntegrateLecture/lecture/templates/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="{% static 'css/base_header.css' %}">
 </head>
 <body>
+    <script>
+        const userClickUrl = '{% url "user_click" %}';
+        const tagClickUrl = '{% url "tag_click" %}';
+        const searchUrl = '{% url "user_search" %}';
+        const csrfToken = '{{ csrf_token }}';
+    </script>
     <header>
         <div class="header-container">
             <div class="logo-container">
