[Fix]avg_sentiment 오류 수정

--- a/IntegrateLecture/lecture/templates/detail.html
+++ b/IntegrateLecture/lecture/templates/detail.html
@@ -14,7 +14,7 @@
         const positivePercentage = {{ positive_percentage|floatformat:2 }};
         const negativePercentage = {{ negative_percentage|floatformat:2 }};
         const neutralPercentage = {{ neutral_percentage|floatformat:2 }};
-        const avgSentiment = {{ review_analysis.avg_sentiment|floatformat:2}};
+        const avgSentiment = {{ avg_sentiment|floatformat:2}};
         const priceHistory = {{ price_history }};
         const priceHistoryDate = {{ price_history_date|safe }};
     </script>
